--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.10.0",
     "cloudinary": "^2.7.0",
     "framer-motion": "^12.19.1",
-    "next": "15.3.3",
+    "next": "^15.5.11",
     "next-auth": "^4.24.11",
     "nprogress": "^0.2.0",
     "postcss": "^8.5.6",
